# roast

./: .ecrc  .editorconfig  .envrc  .flake8  .gitignore  .modules.sh  README.md  flake.nix  pyproject.toml
.github/: README.md  description  make-readme.sh  readme-header.html  topics
docs/: Makefile
docs/source/: api.md  conf.py  index.md  quickstart.md
src/roast/: __init__.py  bflow.py  domain.py  flow.py  fspace.py  parallel.py  plot.py  poussins.py  run.py  simulation.py  stats.py  turbu.py  utils.py
src/roast/diff/: __init__.py  fftdiff.py
src/roast/fft/: __init__.py  _npfft.py  _pyfftw.py  typing.py
tests/: __init__.py  test_fft.py  test_fftdiff.py  test_fspace.py  test_poussins.py  test_stats.py  test_turbu.py
