[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "roast"
version = "0.0.0"
description = "Post-processing toolbox dedicated to the DNS solver POUSSINS."
authors = [
  "Loïc Reynier <loic@loicreynier.fr>",
  "Bastien Di Pierro <bastien.di-pierro@univ-lyon1.fr>",
]
maintainers = ["Loïc Reynier <loic@loicreynier.fr>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
f90nml = "^1.4.3"
h5py = "^3.8.0"
matplotlib = "^3.5.3"
mpi4py = "^3.1.4"
numpy = "^1.24.2"
pillow = "9.4.0"
pyfftw = "^0.13.1"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
ruff = "^0.0.260"
mypy = "0.981"

[tool.poetry.group.docs.dependencies]
sphinx = "5.1.1"
myst-parser = "^1.0.0"
furo = "^2023.3.27"

[tool.black]
line-length = 78

[tool.ruff]
line-length = 78
select = ["E", "D", "F", "I", "PL"]
ignore = [
  "D205", # 1 black line required between summary line and description
  "D400", # First line should end with a period
  "D401", # First line of docstring shoulbd be in imperative mood
]
# `D205` and `D400` are disabled until `pydocstyle` accepts rST header
# in the first line of module's docstrings.
src = ["src", "tests"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.pylint]
max-args = 10
max-branches = 15
